2005-04-19  Matthew Gregan  <kinetik@orcon.net.nz>

	* commands.cc (log): 'depth' option did not handle the single file
	case correctly. Also a couple of minor cleanups.
	* tests/t_log_depth_single.at: New test.
	* testsuite.at: Add test.

2005-04-18  Matthew Gregan  <kinetik@orcon.net.nz>

	* commands.cc (string_to_datetime): Fix warning.

2005-04-18  Richard Levitte  <richard@levitte.org>

	* Makefile.am (EXTRA_DIST): Add contrib/monotone-import.pl.

	* contrib/monotone-import.pl: New script to mimic "cvs import".
	* contrib/README: describe it.

	* commands.cc (CMD(attr)): Make it possible to drop file
	attributes.

	* contrib/monotone-notify.pl (my_exit): The comment was incorrect,
	there are no network connections to close gracefully.
	Implement --ignore-merges, which is on by default, and changes the
	behavior to not produce diffs on merges and propagates where the
	ancestors hve already been shown.

	* tests/t_attr_drop.at: New test to check that 'attr drop'
	correctly drops the given entry.
	* tests/t_drop_attr.at: New test, similar to t_rename_attr.at.
	* testsuite.at: Add them.

2005-04-17  Matt Johnston  <matt@ucc.asn.au>

	* change_set.cc (confirm_proper_tree): remove incorrect code
	setting confirmed nodes.

2005-04-18  Nathaniel Smith  <njs@codesourcery.com>

	* monotone.texi (Dealing with a Fork): Clarify (hopefully) what we
	mean when we say that "update" is a dangerous command.

2005-04-17  Matt Johnston  <matt@ucc.asn.au>

	* change_set.cc (confirm_proper_tree): use a std::set rather than
	dynamic_bitset for the ancestor list, improving performance for
	common tree structures.
	* basic_io.cc: reserve() a string

2005-04-17  Matt Johnston  <matt@ucc.asn.au>

	* packet.cc: fix up unit test compilation.
	* transforms.cc: fix up unit test compilation.

2005-04-17  Matt Johnston  <matt@ucc.asn.au>

	* vocab_terms.hh: remove commented out lines.

2005-04-17  Matt Johnston  <matt@ucc.asn.au>
